--- a/apps/reports/package.json
+++ b/apps/reports/package.json
@@ -1,62 +1,41 @@
 {
   "name": "reports",
-  "version": "0.0.1",
-  "description": "A starting point for Node.js express apps with TypeScript",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DrunkTaric/CureSphere"
-  },
-  "author": "minwook-shin",
-  "license": "GPL-3.0",
+  "version": "1.0.0",
+  "author": "https://github.com/DrunkTaric",
+  "description": "",
   "scripts": {
     "start": "npm run serve",
-    "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
+    "build": "npm run build-ts",
     "serve": "node dist/server.js",
-    "test": "jest --forceExit --coverage --verbose",
+    "test": "jest --coverage=false --verbose",
+    "dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-node": "nodemon dist/server.js",
     "build-ts": "tsc",
-    "build-sass": "node-sass src/public/css/main.scss dist/public/css/main.css",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "ts-node copyStaticAssets.ts"
+    "watch-ts": "tsc -w",
+    "debug": "npm run build && npm run watch-debug",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "typecheck": "tsc --noEmit"
+  },
+  "keywords": [],
+  "license": "MIT",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.2",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^6.0.2",
+    "concurrently": "^8.2.2",
+    "jest": "^29.5.0",
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.3",
+    "typescript": "^5.4.4"
   },
   "dependencies": {
-    "async": "^2.6.0",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "bootstrap-sass": "^3.3.7",
-    "bulma": "^0.7.2",
-    "compression": "^1.7.1",
-    "ejs": "^2.6.1",
-    "errorhandler": "^1.5.0",
-    "express": "^4.16.2",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "winston": "^2.4.0"
-  },
-  "devDependencies": {
-    "@types/async": "^2.0.45",
-    "@types/bluebird": "^3.5.20",
-    "@types/body-parser": "^1.16.8",
-    "@types/compression": "^0.0.35",
-    "@types/errorhandler": "^0.0.32",
-    "@types/express": "^4.11.1",
-    "@types/jest": "^22.1.3",
-    "@types/jquery": "^3.2.17",
-    "@types/morgan": "^1.7.35",
-    "@types/node": "^9.4.6",
-    "@types/request": "^2.47.0",
-    "@types/shelljs": "^0.7.8",
-    "@types/supertest": "^2.0.4",
-    "@types/winston": "^2.3.7",
-    "chai": "^4.1.2",
-    "concurrently": "^3.5.1",
-    "jest": "^22.0.4",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.13.0",
-    "shelljs": "^0.8.1",
-    "supertest": "^3.0.0",
-    "ts-jest": "^22.0.4",
-    "ts-node": "^5.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "ejs": "^3.1.9",
+    "express": "^4.19.2",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0"
   }
 }
