--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -7,8 +7,21 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "noEmit": true,
     "isolatedModules": true,
-  },
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ],
+      "~/src": [
+        "./src/*"
+      ],
+      "../../": [
+        "./src/*"
+      ]
+    }
+  }
 }
