--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@kobalte/core": "^0.12.6",
+    "@solidjs/router": "^0.13.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "solid-js": "^1.8.11",
