--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-font": "^1.2.1",
     "tailwind-merge": "^2.3.0",
